--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://tnews-nsd0lcm20-tumers-projects.vercel.app",
   "name": "news-portal",
   "version": "0.1.0",
   "private": true,
