--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news-portal",
   "version": "0.1.0",
-  "homepage": "https://tnews-black.vercel.app",
+  "homepage": "https://tnews-fqj0gce88-tumers-projects.vercel.app",
   "private": true,
   "dependencies": {
     "@clerk/clerk-react": "^4.30.2",
